--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -8,11 +8,12 @@
   width: 100%;
   display: flex;
   justify-content: space-evenly;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .fList{
   list-style: none;
+  margin-top: 20px;
   padding: 0;
 }
 
