--- a/client/src/components/mailList/mailList.css
+++ b/client/src/components/mailList/mailList.css
@@ -1,8 +1,8 @@
 .mail{
   width: 100%;
   margin-top: 50px;
-  background-color: #42858C;
-  color: white;
+  background-color: #1D2B49;
+  color: #EEA41C;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,7 +21,7 @@
 
 .mailInputContainer>button{
   height: 50px;
-  background-color: #0071c2;
+  background-color: #EEA41C;
   color: white;
   font-weight: 500;
   border: none;
