--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,6 +1,6 @@
 .navbar{
   height: 50px;
-  background-color: #42858C;
+  background-color: #1D2B49;
   display: flex;
   justify-content: center;
 }
