--- a/client/src/pages/hotel/hotel.css
+++ b/client/src/pages/hotel/hotel.css
@@ -20,8 +20,8 @@
   right: 0;
   border: none;
   padding: 10px 20px;
-  background-color: #0071c2;
-  color: white;
+  background-color: #EEA41C;
+  color: #ffffff;
   font-weight: bold;
   border-radius: 5px;
   cursor: pointer;
@@ -102,8 +102,8 @@
 .hotelDetailsPrice > button {
   border: none;
   padding: 10px 20px;
-  background-color: #0071c2;
-  color: white;
+  background-color: #EEA41C;
+  color: #ffffff;
   font-weight: bold;
   cursor: pointer;
   border-radius: 5px;
