--- a/client/src/pages/list/list.css
+++ b/client/src/pages/list/list.css
@@ -13,7 +13,7 @@
 
 .listSearch {
   flex: 1;
-  background-color: #42858C;
+  background-color: #131127;
   padding: 10px;
   border-radius: 10px;
   position: sticky;
@@ -23,7 +23,7 @@
 
 .lsTitle{
   font-size: 20px;
-  color: #000;
+  color: #ffffff;
   margin-bottom: 10px;
 }
 
@@ -36,6 +36,7 @@
 
 .lsItem>label{
   font-size: 12px;
+  color:#fff;
 }
 
 .lsItem>input{
@@ -60,7 +61,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
-  color: #000;
+  color: #ffffff;
   font-size: 12px;
 }
 
@@ -71,8 +72,8 @@
 
 .listSearch>button{
   padding: 10px;
-  background-color: #0071c2;
-  color: white;
+  background-color: #1D2B49;
+  color: #ffffff;
   border: none;
   border-radius: 20px;
   width: 100%;
